fix: alignment in money input component (#599)

--- a/packages/components/src/moneyInput/MoneyInput.less
+++ b/packages/components/src/moneyInput/MoneyInput.less
@@ -38,8 +38,12 @@
   padding-right: calc(var(--size-8) * 2);
 }
 
-.tw-money-input .amount-currency-select-btn > .tw-select > .btn > span {
-  line-height: 21px;
+.tw-money-input .amount-currency-select-btn > .tw-select > .btn-lg > span {
+  line-height: 25px;
+}
+
+.tw-money-input .amount-currency-select-btn > .tw-select > .btn-md > span {
+  line-height: 22px;
 }
 
 .tw-money-input .amount-currency-select-btn > .tw-select > .btn > span.tw-icon {
